feat: Add Vercel deployment configuration - Added vercel.json with proper build settings - Updated package.json with build, dev, and preview scripts - Configured SPA routing for client-side navigation - Added CORS headers for web security

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Browser-based survival game where you play as different Bufo characters, fight enemies, and face epic boss battles.",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
