--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/tehreet/bufo-blaster#readme",
   "dependencies": {
     "matter-js": "^0.20.0",
-    "phaser": "^3.90.0",
-    "sharp": "^0.34.2"
+    "phaser": "^3.90.0"
   },
   "devDependencies": {
     "vite": "^6.3.5"
